fixed overflow issue
issue was fixed using overflow:hidden on html,body class in app.scss

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
 
-//
-// TODO
-// Fix overflow issues
-//
-
 .App {
   margin: 0;
   padding: 0;
@@ -13,4 +8,18 @@
   width: 100vw;
   background-color: var(--background-color);
   transition: background-color 0.25s ease-in-out;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
 }
