--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -2,6 +2,7 @@
 
 .navbar {
   display: flex;
+  overflow: hidden;
 }
 
 .navbar-title {
